--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,5 @@
     --bg-navy-custom: #035476;
     --bg-black-custom: #035476;
     --bg-gray-custom-2: #F7F7F7;
+    --bg-gray-custom-3: #F1FAF9;
 }
